# smite

./: CMakeLists.txt  README.md
include/smite/: enumerate_iterator.hpp  filter_iterator.hpp  multistep_iterator.hpp  range.hpp  smite.hpp  transform_iterator.hpp  zip_iterator.hpp
include/smite/details/: compressed_pair.hpp  fake_ptr.hpp  storage.hpp
tests/: smite-tests.cpp
